--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -4,454 +4,545 @@ title: CentOS搭建开发环境
 categories: [Linux]
 ---
 
-CentOS6.3纯净系统
+Update: 2019/06/09
 
-安装的软件`nginx-1.10.1` `mysql-5.6.31` `php-5.6.23`
+系统版本 CentOS6 -> CentOS7
 
-## 准备
+## 服务器配置
+
+### 安装常用软件
 
 ```shell
 yum update
+# 开发工具包
 yum groupinstall -y "Development Tools"
+yum install cmake ncurses-devel zlib* fiex* libxml* libmcrypt* libtool-ltdl-devel*
+yum install openssl openssl-devel libcurl-devel libxslt libxslt-devel
+yum install apr* autoconf automake bison bison-devel bzip2 bzip2* cloog-ppl cpp
+yum install curl curl-devel fontconfig fontconfig-devel freetype freetype*
+yum install freetype-devel gcc gcc-c++ gtk+-devel gd gettext gettext-devel
+yum install glibc kernel kernel-headers keyutils keyutils-libs-devel krb5-devel
+yum install libcom_err-devel libpng libpng* libpng-devel libjpeg* libsepol-devel
+yum install libselinux-devel libstdc++-devel libtool* libgomp libxml2 libxml2-devel libXpm* libX*
+yum install libtiff libtiff* make mpfr ntp nasm nasm*
+yum install patch pcre-devel perl yasm libmcrypt libmcrypt-devel
+yum install policycoreutils ppl telnet t1lib t1lib* wget zlib-devel readline readline-devel
+yum install libjpeg libjpeg-devel libpng libpng-devel freetype freetype-devel libcurl 
+yum install mhash-devel bzip2 bzip2-devel readline-devel libedit-devel sqlite-devel gmp gmp-devel
+
+# TAB补全增强工具
+yum install bash-completion
+# 拖拽上传文件
+yum install lrzsz
 ```
 
-## 安装nginx
+### 关闭不用的服务
 
-```shell
-wget http://nginx.org/download/nginx-1.10.1.tar.gz
-tar -zxvf nginx-1.10.1.tar.gz
-cd nginx-1.10.1
-./configure
-错误提示
-./configure: error: the HTTP rewrite module requires the PCRE library.
-You can either disable the module by using --without-http_rewrite_module
-option, or install the PCRE library into the system, or build the PCRE library
-statically from the source with nginx by using --with-pcre=<path> option.
-解决错误
+- 关闭 SELinux
+
+  ```
+  /usr/sbin/sestatus -v  #查看SELinux状态
+  getenforce  #也可以用这个命令检查
+  setenforce 0  #临时关闭(不用重启机器) 0为permissive模式 1为enforcing模式
+  vi /etc/selinux/config #永久关闭，将SELINUX=enforcing改为SELINUX=disabled
+  ```
+
+- 关闭防火墙
+
+  ```
+  service iptables stop  #停止服务
+  chkconfig iptables off  #开机不再启动
+  ```
+
+### 更改 ssh 端口
+
+不建议使用用户名+密码的方式登陆，容易被人扫描暴力破解
+
+为了使用方便还是不设置密钥登陆，但是一定要更改下默认的 22 端口
+
+```
+# 更改配置项Port 8022
+vi /etc/ssh/sshd_config
+# 重启服务
+service sshd restart
+```
+
+### 中文支持
+
+```
+# 查看系统拥有语言包,zh_CN.utf8是简体中文
+locale -a
+# 如果没有
+yum install kde-l10n-Chinese
+# 修改locale文件 LANG=zh_CN.UTF8
+# 重启生效
+vi /etc/locale.conf
+```
+
+### 设置开机自启动脚本
+
+开机启动后要执行的命令可以追加在`rc.local`后面
+
+在 centos7 中，`/etc/rc.d/rc.local`的权限被降低了，所以需要执行如下命令赋予其可执行权限
+
+```
+chmod +x /etc/rc.d/rc.local
+```
+
+## Nginx
+
+### 安装
+
+```
+wget http://nginx.org/download/nginx-1.14.2.tar.gz
+tar -zxvf nginx-1.14.2.tar.gz
+cd nginx-1.14.2/
+./configure --prefix=/usr/local/nginx --with-http_stub_status_module --with-http_ssl_module --with-file-aio --with-http_realip_module
+make
+make install
+```
+
+configure 的过程可能会有下面的报错,安装好依赖就行了
+
+the HTTP rewrite module requires the PCRE library
+
+```
 wget ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-8.39.tar.gz
 tar -zxvf pcre-8.39.tar.gz
 cd pcre-8.39
 ./configure
 make
 make install
+```
 
-cd nginx-1.10.1
-./configure
-又报错
-./configure: error: the HTTP gzip module requires the zlib library.
-You can either disable the module by using --without-http_gzip_module
-option, or install the zlib library into the system, or build the zlib library
-statically from the source with nginx by using --with-zlib=<path> option.
-解决错误
+the HTTP gzip module requires the zlib library
+
+```
 wget http://zlib.net/zlib-1.2.8.tar.gz
 tar -zxvf zlib-1.2.8.tar.gz
 cd zlib-1.2.8
 ./configure
 make
 make install
-
-cd nginx-1.10.1
-./configure
-make
-make install
-安装成功
 ```
 
-### nginx配置
+### 启动
 
-```shell
-vi /usr/local/nginx/conf/nginx.conf
+```
+# 启动
+/usr/local/nginx/sbin/nginx
+# 停止
+/usr/local/nginx/sbin/nginx -s stop
+# 更新配置
+/usr/local/nginx/sbin/nginx -s reload
+```
 
-修改为
-######################################
-user  www-web www-web;
-worker_processes  1;
+### 配置
 
-error_log  logs/error.log;
+配置文件`/usr/local/nginx/conf/nginx.conf`
 
-pid        logs/nginx.pid;
-
-events {
-    worker_connections  1024;
-}
-
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  65;
-#空的虚拟主机，防止非绑定的域名和ip访问
-    server {
-        listen 80 default;
-        server_name _;
-        return 500;
+```
+# 禁止IP或其他域名直接访问
+server {
+    listen       80 default;
+    server_name  _;
+    types {
+        application/json *;
     }
-#虚拟主机test.tmaize.net
-    server {
-        listen       80;
-        server_name  test.tmaize.net www.test.tmaize.net;
-        charset utf-8;
-        location /{
-            root   /www.tmaize.net/test.tmaize.net;
-            index  index.html index.htm index.php;
-        }
+    default_type application/json;
+    return 404 '{"status":404,"msg":"这里没有部署项目-_-|||"}';
+}
+# 静态内容
+server {
+    listen       80;
+    server_name  xxx.com;
+    location / {
+        root   /www/xxx.com;
+        index  index.html;
+    }
+    error_page 404 403 500 502 503 504 /404.html;
+}
+# 反向代理Tomcat
+server {
+    listen       80;
+    server_name  java.xxx.com;
+    location / {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-Ip $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_pass http://127.0.0.1:8080;
     }
 }
-######################################
-		
-启动服务
-cd /usr/local/nginx/sbin/
-./nginx
-报错
-./nginx: error while loading shared libraries: libpcre.so.1: cannot open shared object file: No such file or directory
-解决
-cd /lib
-ln -s libpcre.so.0.0.1 libpcre.so.1
-
-继续启动服务
-cd /usr/local/nginx/sbin/
-./nginx
-又报错
-nginx: [emerg] getpwnam("www-web") failed in /usr/local/nginx/conf/nginx.conf:1
-解决 创建www-web用户
-groupadd www-web
-useradd -r -g www-web www-web
-usermod -s /sbin/nologin www-web
-
-继续启动服务
-cd /usr/local/nginx/sbin/
-./nginx
-./nginx -s reload
-服务启动成功，最好在/etc/init.d/下写一个脚本方便管理启动
-打开test.tmaize.net显示/www.tmaize.net/test.tmaize.net里的页面
-
-更改权限
-chown -R www-web /www.tmaize.net/
-chgrp -R www-web /www.tmaize.net/
-
-至此mysql配置完成
-```
-
-## 安装Mysql
-
-```shell
-清除mysql相关
-rpm -qa |grep -i mysql  //先查看系统下有哪些包含MySQL字符串的包
-rpm -ev --nodeps mysql-libs-5.1.61-4.el6.i686
-
-下载
-到Mysql官网http://www.mysql.com/downloads/
-选择Community 版本
-选择MySQL Community Server (GPL)
-Select Platform:Source Code
-选择倒数第二个
-Generic Linux (Architecture Independent), Compressed TAR Archive
-(mysql-5.6.31.tar.gz)
-wget http://dev.mysql.com/get/Downloads/MySQL-5.6/mysql-5.6.31.tar.gz
-
-之前的yum groupinstall -y "Development Tools"好像没有cmake工具
-yum install cmake bison-devel ncurses-devel autoconf automake zlib* fiex* libxml* libmcrypt* libtool-ltdl-devel*
-
-cmake \
--DCMAKE_INSTALL_PREFIX=/usr/local/mysql \
--DMYSQL_DATADIR=/usr/local/mysql/data \
--DSYSCONFDIR=/etc \
--DWITH_MYISAM_STORAGE_ENGINE=1 \
--DWITH_INNOBASE_STORAGE_ENGINE=1 \
--DWITH_MEMORY_STORAGE_ENGINE=1 \
--DWITH_READLINE=1 \
--DMYSQL_UNIX_ADDR=/var/lib/mysql/mysql.sock \
--DMYSQL_TCP_PORT=3306 \
--DENABLED_LOCAL_INFILE=1 \
--DWITH_PARTITION_STORAGE_ENGINE=1 \
--DEXTRA_CHARSETS=all \
--DDEFAULT_CHARSET=utf8 \
--DDEFAULT_COLLATION=utf8_general_ci
-
-make  //大概需要20分钟
-make install
-```
-
-### 配置mysql
-
-```shell
-配置用户及权限
-groupadd mysql
-useradd -r -g mysql mysql
-usermod -s /sbin/nologin mysql
-chown -R mysql:mysql /usr/local/mysql
-
-mysql配置
-cd /usr/local/mysql
-scripts/mysql_install_db --basedir=/usr/local/mysql --datadir=/usr/local/mysql/data --user=mysql
-//最后的显示New default config file was created as /usr/local/mysql/my.cnf
-
-注：在启动MySQL服务时，会按照一定次序搜索my.cnf，先在/etc目录下找，找不到则会搜索"$basedir/my.cnf"
-这里使用/usr/local/mysql/my.cnf，这是新版MySQL的配置文件的默认位置！
-注意：在CentOS 6.4版操作系统的最小安装完成后，在/etc目录下会存在一个my.cnf，需要将此文件更名为其他的名字
-如：/etc/my.cnf.bak，否则，该文件会干扰源码安装的MySQL的正确配置，造成无法启动。
-在使用"yum update"更新系统后，需要检查下/etc目录下是否会多出一个my.cnf
-如果多出，将它重命名成别的。否则，MySQL将使用这个配置文件启动，可能造成无法正常启动等问题。
-
-添加PATH
-vi /etc/profile
-在文件最后添加
----
-PATH=/usr/local/mysql/bin:$PATH
-export PATH
----
-source /etc/profile  //修改生效
-
-添加服务
-拷贝服务脚本到init.d目录
-cp /usr/local/mysql/support-files/mysql.server /etc/init.d/mysql
-chmod +x /etc/init.d/mysql
-service mysql start
-chkconfig mysql on  //设置开机启动可选
-
-配置用户
-mysql -u root
-SET PASSWORD = PASSWORD('设置密码');
-exit
-mysql -u root -p  //输入刚才的密码登陆
-GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY '密码' WITH GRANT OPTION;
-FLUSH privileges; //更新权限
-在本地同Navicat登陆试一下，顺便删除多余的用户，留一个root@%就可以了
-
-配置防火墙，前面貌似关掉过了
-至此mysql配置完成，更多配置请修改配置文件
-```
-
-### mysql优化
-
-```shell
-安装之后发现mysql的内存占用大概在400M左右，对1G内存的机器实在是吃力
-下面通过修改mysql配置文件达到降低内存占用的目的
-
-vi /usr/local/mysql/my.cnf
-
-# 一些优化
-port= 3306
-character-set-server=utf8
-performance_schema_max_table_instances=200
-table_definition_cache=200
-table_open_cache=128
-innodb=OFF
-default-storage-engine=MYISAM
-default-tmp-storage-engine=MYISAM
-loose-innodb-trx=0
-loose-innodb-locks=0
-loose-innodb-lock-waits=0
-loose-innodb-cmp=0
-loose-innodb-cmp-per-index=0
-loose-innodb-cmp-per-index-reset=0
-loose-innodb-cmp-reset=0
-loose-innodb-cmpmem=0
-loose-innodb-cmpmem-reset=0
-loose-innodb-buffer-page=0
-loose-innodb-buffer-page-lru=0
-loose-innodb-buffer-pool-stats=0
-loose-innodb-metrics=0
-loose-innodb-ft-default-stopword=0
-loose-innodb-ft-inserted=0
-loose-innodb-ft-deleted=0
-loose-innodb-ft-being-deleted=0
-loose-innodb-ft-config=0
-loose-innodb-ft-index-cache=0
-loose-innodb-ft-index-table=0
-loose-innodb-sys-tables=0
-loose-innodb-sys-tablestats=0
-loose-innodb-sys-indexes=0
-loose-innodb-sys-columns=0
-loose-innodb-sys-fields=0
-loose-innodb-sys-foreign=0
-loose-innodb-sys-foreign-cols=0
-join_buffer_size = 64M
-sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES
-#结束
-
-新开窗口监视内存变化
-watch -n 2 -d free -h  //新窗口
-service mysql start  //旧窗口
-发现占用70M左右，比之前的400M下降了许多
-```
-
-
-## php安装前准备
-
-```shell
-把php相关的卸载干净
-yum remove php
-到php官网http://php.net/下载php源码
-wget http://cn.php.net/distributions/php-5.6.23.tar.gz
-
-添加repoforge源
-官网http://repoforge.org/  选择usage EL 6: i686
-wget http://pkgs.repoforge.org/rpmforge-release/rpmforge-release-0.5.3-1.el6.rf.i686.rpm
-rpm -ivh rpmforge-release-0.5.3-1.el6.rf.i686.rpm
-
-更新源
-yum clean all
-yum makecache
-yum list
-
-安装需要的库 干脆一次性装个全的
-yum install -y apr* autoconf automake bison bison-devel bzip2 bzip2* cloog-ppl compat* cpp 
-yum install -y curl curl-devel fontconfig fontconfig-devel freetype freetype* 
-yum install -y freetype-devel gcc gcc-c++ gtk+-devel gd gettext gettext-devel 
-yum install -y glibc kernel kernel-headers keyutils keyutils-libs-devel krb5-devel 
-yum install -y libcom_err-devel libpng libpng* libpng-devel libjpeg* libsepol-devel 
-yum install -y libselinux-devel libstdc++-devel libtool* libgomp libxml2 libxml2-devel libXpm* libX* 
-yum install -y libtiff libtiff* make mpfr ncurses* ntp openssl nasm nasm* 
-yum install -y openssl-devel patch pcre-devel perl php-common php-gd yasm
-yum install -y policycoreutils ppl telnet t1lib t1lib* wget zlib-devel readline-devel
-yum install -y libxml2-devel libjpeg-devel libpng-devel openssl-devel freetype-devel libmcrypt-devel libcurl-devel
-yum install -y zlib-devel libmcrypt-devel  mhash-devel  libcurl-devel bzip2-devel readline-devel libedit-devel sqlite-devel
-
-```
-
-### php安装
-
-```shell
-./configure \
---prefix=/usr/local/php5.6 \
---with-config-file-path=/usr/local/php5.6/etc \
---enable-inline-optimization \
---disable-debug \
---disable-rpath \
---enable-shared \
---enable-opcache \
---enable-fpm \
---with-fpm-user=www-web \
---with-fpm-group=www-web \
---with-mysql=mysqlnd \
---with-mysqli=mysqlnd \
---with-pdo-mysql=mysqlnd \
---with-gettext \
---enable-mbstring \
---with-iconv \
---with-mcrypt \
---with-mhash \
---with-openssl \
---enable-bcmath \
---enable-soap \
---with-libxml-dir \
---enable-pcntl \
---enable-shmop \
---enable-sysvmsg \
---enable-sysvsem \
---enable-sysvshm \
---enable-sockets \
---with-curl \
---with-zlib \
---enable-zip \
---with-bz2 \
---with-readline
-
-没有报错 如果报错请安装缺少的库文件
-
-make  //大概15分钟
-make install
-
-cp php.ini-production /usr/local/php5.6/etc/php.ini  //复制php配置文件到安装目录
-rm -rf /etc/php.ini  //删除系统自带配置文件
-ln -s /usr/local/php5.6/etc/php.ini /etc/php.ini  //添加软链接到 /etc目录
-cp /usr/local/php5.6/etc/php-fpm.conf.default /usr/local/php5.6/etc/php-fpm.conf  //拷贝模板文件为php-fpm配置文件
-ln -s /usr/local/php5.6/etc/php-fpm.conf /etc/php-fpm.conf  //添加软连接到 /etc目录
-
-vi /etc/php-fpm.conf  //去掉pid = run/php-fpm.pid的注释
-
-添加php-fpm启动脚本
-cp sapi/fpm/init.d.php-fpm /etc/init.d/php-fpm5.6
-chmod +x /etc/init.d/php-fpm5.6
-
-vi /usr/local/php5.6/etc/php.ini
-
-date.timezone = PRC #设置时区
-short_open_tag = On #支持php短标签
-opcache.enable=1 #php支持opcode缓存
-opcache.enable_cli=0
-在最后一行添加：zend_extension=opcache.so #开启opcode缓存功能
-
-添加 PHP 命令到环境变量
-vi /etc/profile
-修改最后几行：PATH=$PATH:/usr/local/mysql/bin:/usr/local/php5.6/bin 保存
-php -v  //显示PHP版本
-
-配置nginx支持php
-#虚拟主机test.tmaize.net
-    server {
-        listen       80;
-        server_name  test.tmaize.net www.test.tmaize.net;
-        charset utf-8;
-        location /{
-            root   /www.tmaize.net/test.tmaize.net;
-            index  index.html index.htm index.php;
+# 反向代理Tomcat单个应用
+server {
+    listen       80;
+    server_name  app1.xxx.com;
+    location / {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-Ip $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_pass http://127.0.0.1:8080/app1/;
+    }
+    location /app1 {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-Ip $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_pass http://127.0.0.1:8080;
+    }
+}
+# 反向代理PHP
+server {
+    listen       80;
+    server_name  php.xxx.com;
+    root   /www/php.xxx.com/;
+    index  index.html index.htm index.php;
+    # rewrite
+    location / {
+        if (-f $request_filename/index.html){
+            rewrite (.*) $1/index.html break;
         }
-        location ~ \.php$ {
-            root   /www.tmaize.net/test.tmaize.net;
-            fastcgi_pass   127.0.0.1:9000;
-            fastcgi_index  index.php;
-            fastcgi_param  SCRIPT_FILENAME  /www.tmaize.net/test.tmaize.net$fastcgi_script_name;
-            include        fastcgi_params;
+        if (-f $request_filename/index.php){
+            rewrite (.*) $1/index.php;
         }
-
-至此php基本配置完成
+        if (!-f $request_filename){
+            rewrite (.*) /index.php;
+        }
+    }
+    # typecho 地址重写配置，显示不支持，强制开启就行了
+    location /typecho {
+        # 找不到时候重写成pathinfo
+        if (!-e $request_filename) {
+            rewrite  ^/(.*)$ /typecho/index.php/$1  last;
+            break;
+        }
+    }
+    location ~ .*\.php(\/.*)*$ {
+        fastcgi_pass    127.0.0.1:9000;
+        fastcgi_index  index.php;
+        #设置PATH_INFO，注意fastcgi_split_path_info已经自动改写了fastcgi_script_name变量
+        #后面不需要再改写SCRIPT_FILENAME,SCRIPT_NAME环境变量，所以必须在加载fastcgi.conf之前设置
+        fastcgi_split_path_info  ^(.+\.php)(/.*)$;
+        fastcgi_param  PATH_INFO $fastcgi_path_info;
+        #加载Nginx默认"服务器环境变量"配置
+        include         fastcgi.conf;
+    }
+}
 ```
 
-## 总结
+## Mysql
 
+使用 RPM 方式安装，比较方便，不推荐编译安装
 
-以上只是一些简单的安装步骤，并没有做详细的配置
-在具体应用中还会遇到好多问题，遇到问题就多Google
-
-## 更新
-
-2018.12.01
-
-### mysql RPM安装
-
-很快很方便
-
-添加源,安装源，安装mysql，修改密码，开启远程登陆
+### 安装
 
 ```
-wget https://dev.mysql.com/get/mysql57-community-release-el7-9.noarch.rpm
-
+wget https://repo.mysql.com//mysql57-community-release-el7-9.noarch.rpm
 rpm -ivh mysql57-community-release-el7-9.noarch.rpm
-
 yum install mysql-community-server
+```
 
-# 安装完毕
-systemctl stop mysqld #关闭MySQL
-systemctl restart mysqld #重启MySQL
-systemctl status mysqld #查看MySQL运行状态
-systemctl enable mysqld #设置开机启动
+### 启动
+
+```
+systemctl start mysqld   #启动 MySQL
+systemctl stop mysqld    #关闭 MySQL
+systemctl restart mysqld #重启 MySQL
+systemctl status mysqld  #查看 MySQL 运行状态
+systemctl enable mysqld  #设置开机启动
 systemctl disable mysqld #关闭开机启动
+```
 
-# 获取默认密码
+### 更改密码
+
+启动后需要以 root 用户登入进去，然后更改密码，不然没有操作权限
+
+```
+# 获取默认的随机密码
 grep 'temporary password' /var/log/mysqld.log
 
 # 登陆
 mysql -u root -p
 
-# 设置密码，由于安全策略，简单密码不予通过
+# 允许设置简单密码，重启后改配置失效
+set global validate_password_policy=0;
+set global validate_password_length=4;
+
+# 设置密码，由于安全策略，不要设置过于简单的密码
 set password = password('Xxxxxxx');
 
-# 允许远程登陆
-grant all privileges on *.* to root@'%'identified by 'mysql的密码';
+# 新建root用户，允许远程访问，授予所有权限
+grant all privileges on *.* to 'root'@'%' identified by '设置新用户密码';
+flush privileges;
 ```
 
-### JDK RPM安装
+### 配置
 
-官网有下载rpm包，这里下载的是jdk-8u191-linux-x64.rpm
+配置编码为 utf8mb4，从而支持 emoji 表情
+
+关闭密码强度校验插件
+
+内存优化，由于内存较小，适当调整相关资源，关闭不需要的功能
+
+配置文件位于`/etc/my.cnf`,追加如下内容
 
 ```
+[client]
+# 编码设置
+default-character-set = utf8mb4
+
+[mysql]
+# 编码设置
+default-character-set = utf8mb4
+
+[mysqld]
+datadir=/var/lib/mysql
+socket=/var/lib/mysql/mysql.sock
+symbolic-links=0
+log-error=/var/log/mysqld.log
+pid-file=/var/run/mysqld/mysqld.pid
+
+# 编码设置
+character-set-client-handshake = FALSE
+character-set-server = utf8mb4
+collation-server = utf8mb4_unicode_ci
+init_connect='SET NAMES utf8mb4'
+
+# 内存优化
+performance_schema = OFF
+performance_schema_max_table_instances = 600
+table_definition_cache = 400
+table_open_cache = 256
+
+# 关闭密码校验插件
+validate_password = OFF
+```
+
+### 配置信息查询
+
+查看插件状态
+
+```
+show plugins;
+```
+
+查看启动后载入的配置信息
+
+```
+SHOW VARIABLES;
+SHOW VARIABLES LIKE 'validate_password%';
+```
+
+## JAVA
+
+### JDK 安装
+
+官网有下载 rpm 包，这里下载的是 jdk-8u191-linux-x64.rpm
+
+会安装到`/usr/java/`目录下
+
+```
+# 先查询是否已经安装了 openjdk，有就卸载
+
+rpm -qa | grep java
+
+# 本地下载然后上传到服务器
+
 rpm -ivh jdk-8u191-linux-x64.rpm
 ```
 
-直接安装就行了，默认存放在/usr/java文件目录中，安装完也不用设置环境变量
+### 环境变量配置
+
+修改`/etc/profile`文件，后面追加如下内容
+
+```
+JAVA_HOME=/usr/java/jdk1.8.0_191-amd64
+JRE_HOME=${JAVA_HOME}/jre
+CLASSPATH=.:${JAVA_HOME}/lib:\${JRE_HOME}/lib
+
+# PATH=${JAVA_HOME}/bin:$PATH
+
+export JAVA_HOME JRE_HOME CLASSPATH
+```
+
+由于是 rpm 安装，`${JAVA_HOME}/bin`下的命令已经链接到了`/usr/bin` 下面，无需再设置`PATH=${JAVA_HOME}/bin:$PATH`
+
+为了防止别的软件使用`JAVA_HOME`等化境变量，这个我们定义然后导出下就行了
+
+修改完后 source 下立即生效
+
+```
+source /etc/profile
+```
 
 ### Tomcat 安装
 
-使用官网的zip包，直接解压就可使用，前提是安装好Java环境
+直接去官方下载 zip 包，装好 Java 环境后直接就启动了
+
+```
+wget https://mirrors.tuna.tsinghua.edu.cn/apache/tomcat/tomcat-8/v8.5.41/bin/apache-tomcat-8.5.41.tar.gz
+
+tar -zxvf apache-tomcat-8.5.41.tar.gz
+mkdir -p /usr/local/tomcat
+mv apache-tomcat-8.5.41 /usr/local/tomcat/
+```
+
+追加启动命令到`/etc/rc.d/rc.local`，方便开机自启
+
+```
+/usr/local/tomcat/apache-tomcat-8.5.41/bin/startup.sh
+```
+
+解决 centos7 没有足够的熵来用于产生随机数，导致 tomcat 启动超级慢
+
+```
+vim $JAVA_HOME/jre/lib/security/java.security
+securerandom.source=file:/dev/random
+# 改为
+securerandom.source=file:/dev/urandom
+```
+
+启动 manager-gui，调整`tomcat-users.xml`添加访问用户,然后找到`webapps/manager/META-INF/context.xml`中注释掉仅允许内部 IP 访问的设置
+
+```
+<role rolename="manager-gui"/>
+<role rolename="admin-gui"/>
+<user username="user01" password="123456xxx" roles="admin-gui,manager-gui"/>
+```
+
+## PHP
+
+配置 PHP7 的源
+
+```
+yum install epel-release
+rpm -Uvh https://mirror.webtatic.com/yum/el7/webtatic-release.rpm
+```
+
+安装
+
+```
+yum install php70w php70w-common php70w-fpm php70w-opcache php70w-gd php70w-mysqlnd php70w-mbstring php70w-devel
+```
+
+CentOS 自带了 PHP5,安装 PHP7 的时候会遇到一些冲突,提示什么冲突就就删除什么，直到上面的命令可以执行
+
+```
+yum remove php-common-5.4.16-46.el7.x86_64
+```
+
+安装完毕后
+
+```
+# 查看版本
+php -v
+# 查看安装的模块
+php -m
+```
+
+配置文件位于`/etc/php.ini`
+
+```
+#启动,restart-重启，stop-停止
+systemctl start php-fpm
+#开机启动
+systemctl enable php-fpm
+```
+
+下面是一些常用的拓展，以后缺少什么就安装什么
+
+```
+安装包 提供的拓展
+php70w mod_php, php70w-zts
+php70w-bcmath
+php70w-cli php-cgi, php-pcntl, php-readline
+php70w-common php-api, php-bz2, php-calendar, php-ctype, php-curl, php-date, php-exif, php-fileinfo, php-filter, php-ftp, php-gettext, php-gmp, php-hash, php-iconv, php-json, php-libxml, php-openssl, php-pcre, php-pecl-Fileinfo, php-pecl-phar, php-pecl-zip, php-reflection, php-session, php-shmop, php-simplexml , php-sockets, php-spl, php-tokenizer, php-zend-abi, php-zip, php-zlib
+php70w-dba
+php70w-devel
+php70w-embedded php-embedded-devel
+php70w-enchant
+php70w-fpm
+php70w-gd
+php70w-imap
+php70w-interbase php_database, php-firebird
+php70w-intl
+php70w-ldap
+php70w-mbstring
+php70w-mcrypt
+php70w-mysql php-mysqli, php_database
+php70w-mysqlnd php-mysqli, php_database
+php70w-odbc php-pdo_odbc, php_database
+php70w-opcache php70w-pecl-zendopcache
+php70w-pdo php70w-pdo_sqlite, php70w-sqlite3
+php70w-pdo_dblib php70w-mssql
+php70w-pear
+php70w-pecl-apcu
+php70w-pecl-imagick
+php70w-pecl-memcached
+php70w-pecl-mongodb
+php70w-pecl-redis
+php70w-pecl-xdebug
+php70w-pgsql php-pdo_pgsql, php_database
+php70w-phpdbg
+php70w-process php-posix, php-sysvmsg, php-sysvsem, php-sysvshm
+php70w-pspell
+php70w-recode
+php70w-snmp
+php70w-soap
+php70w-tidy
+php70w-xml php-dom, php-domxml, php-wddx, php-xsl
+php70w-xmlrpc
+```
+
+## Golang
+
+```
+mkdir -p /usr/local/go
+mkdir -p /usr/local/go/gopath
+cd /usr/local/go
+wget https://dl.google.com/go/go1.12.5.linux-amd64.tar.gz
+tar -zxvf go1.12.5.linux-amd64.tar.gz
+mv go go_1.12.5
+```
+
+配置环境变量`/etc/profile`后追加，然后`source /etc/profile`
+
+```
+# Golang 环境变量
+GOROOT=/usr/local/go/go_1.11.10
+GOPATH=/usr/local/go/gopath
+GO111MODULE=on
+GOPROXY=https://goproxy.io
+PATH=$PATH:$GOROOT/bin:$GOPATH/bin
+
+export GOROOT GOPATH GO111MODULE GOPROXY PATH
+```
+
+## NodeJS
+
+```
+mkdir -p /usr/local/nodejs
+cd /usr/local/nodejs
+wget https://nodejs.org/dist/v10.16.0/node-v10.16.0-linux-x64.tar.xz
+xz -d node-v10.16.0-linux-x64.tar.xz
+tar -xvf node-v10.16.0-linux-x64.tar
+```
+
+配置环境变量`/etc/profile`后追加，然后`source /etc/profile`
+
+```
+# NodeJS 环境变量
+NODE_HOME=/usr/local/nodejs/node-v10.16.0-linux-x64
+NODE_GLOBAL_MODEL=/usr/local/nodejs/node_global
+PATH=$PATH:$NODE_HOME/bin:$NODE_GLOBAL_MODEL/bin
+
+export NODE_HOME PATH
+```
+
+配置
+
+```
+npm config set prefix "/usr/local/nodejs/node_global"
+npm config set cache "/usr/local/nodejs/node_cache"
+# 全局装个软件试一下
+npm install -g hexo-cli
+```
