--- a/_posts/2018-07-28-GO的包管理和构建.md
+++ b/_posts/2018-07-28-GO的包管理和构建.md
@@ -160,3 +160,60 @@ export GOOS=linux
 export GOARCH=amd64
 go build -o dist/linux_demo demo.go
 ```
+
+## Go Mod
+
+对于 go 使用 GOPATH 的麻烦就不说了，终于在 1.11 版本后，官方推出了 Go Mod
+
+在 GoLand 中 File -> Settings -> Go -> Go Modules(vgo) 可以开启
+
+以前建立一个项目的做法是在 GOPATH 的 src 下面建立`xxx.com/username/projectname`目录
+
+使用 go mod 后直接在任意一个位置建立目录就行了，然后执行`go mod init [module name]`。它会初始化一个`go.mod`文件，一般内容如下
+
+```
+module github.com/tmaize/file-manager
+
+go 1.12
+
+require gopkg.in/yaml.v2 v2.2.2
+# exclude 排除依赖，多个项目依赖同一个项目的不同版本，可以设置排除某个版本
+# replace 有时候网络不行的时候可以把golang.org/x/.. 下的包 使用github.com/golang/x进行替换
+```
+
+关于依赖默认下载最新版本，你也可以指定版本号，前提是所依赖的项目打了 tag
+
+当使用`go get -m [packages]`会将下载的依赖包放到`GOPATH/pkg/mod`目录下，并且将依赖写入到 go.mod 文件。`go get -u=patch`会更新主模块下的所有依赖包。
+
+终端输入`go mod`可以查看所支持的命令，下面是几个常用的命令
+
+```
+download    下载go.mod文件中的依赖到本地，${GOPATH/pkg/mod}下面
+edit        这个就算了，直接编辑文件更省事
+graph       列出所有依赖
+init        初始化项目
+tidy        分析项目代码，在go.mod文件中添加缺少，删除多余的依赖
+vendor      复制依赖到项目的verdor目录中
+verify      验证依赖是否缺少
+why         展示依赖关系
+```
+
+最后还有一个环境变量`GO111MODULE`，取值有` off,``on `或者`auto`(默认)
+
+off: 在 vendor 目录下和 GOPATH 目录中查找依赖包
+
+on: GOPATH 不再在 build 时扮演导入的角色，但是尽管如此，它还是承担着存储下载依赖包的角色。它会将依赖包放在 GOPATH/pkg/mod 目录下
+
+auto: 只有当前目录在`GOPATH/src`目录之外而且当前目录包含`go.mod`文件或者其子目录包含 go.mod 文件才会启用。
+
+## GOPROXY
+
+由于网络原因，一些包下载不下来，在 Go 1.11 后，开始支持配置 GOPROXY 代理下载，只需要在环境变量里配置 GOPROXY 即可
+
+这里推荐[https://goproxy.io](https://goproxy.io)，提供了现成的免费服务，同时也提供了工具方便自己搭建
+
+测试是否生效可已下载个`golang.org`下的包试试，一般这个网络是访问不到的比如：
+
+```
+go get -u golang.org/x/tools/cmd
+```
