--- a/_posts/2018-07-08-go笔记.md
+++ b/_posts/2018-07-08-go笔记.md
@@ -4,9 +4,6 @@ title: GO语言学习笔记
 categories: [Go]
 ---
 
-待整理....
-
-
 ## 安装
 
 不多说
@@ -674,44 +671,110 @@ func main() {
 }
 ```
 
-## 线程通讯
+## channel
 
-这一机制通过 channels 的形式使用。channel 可以与 Unix sehll 中的双向管道做类比：可以通过它发送或者接收值。这些值只能是特定的类型： channel 类型。定义一个 channel 时，也需要定义发送到 channel 的值的类型。注意，必须使用 make 创建 channel：
+> Share memory by communicating, don’t communicate by sharing memory.
+> 通过通信共享内存，而不是通过共享内存而通信
 
-```
-ci := make(chan int)
-cs := make(chan string)
-cf := make(chan interface { })
+在并发编程中，通信是保证数据正确的重要手段，golang 提供了 channel 的方式来实现通讯，当然他是线程安全的
 
-ci <− 1 ← 发送整数 1 到 channel ci
-<−ci ← 从 channel ci 接收整数
-i := <−ci ← 从 channel ci 接收整数，并保存到 i 中
-```
+下面是一个简单的无缓冲的通道，注意这是无缓冲的，意味着直接读，直接写都会引起阻塞，如果在一个线程内直接进行读/写或者写/读会导致进程 deadlock
 
 ```
-var c chan int
-
-func ready(w string, sec int) {
-	time.Sleep(time.Duration(sec) * time.Second)
-	fmt.Println(w, "is ready !")
-	c <- 123 //发送任意数据数据到channel
-}
-
-func main() {
-	c = make(chan int)
-	go ready("Tea", 2)
-	go ready("Coffee", 1)
-	fmt.Println("I'm waiting")
-	//做两次等待
-	// 等待接收值 并赋值给i
-	i := <-c
-	fmt.Println(i) //123
-	//等待接收值
-	<-c
-}
+c := make(chan int)
+go func() {
+    c <- 1
+}()
+i := <-c
+fmt.Println(i)
 ```
 
-select 暂时用不到
+下面是有缓冲的通道，在通道为空读，通道为满写的时候都是阻塞的，因此下面写入不阻塞，读取不阻塞
+
+```
+c := make(chan int, 1)
+c <- 1
+i := <-c
+fmt.Println(i)
+```
+
+## 并发锁
+
+在并发编程中，通锁来保证数据读取和写入的正确性，通过 channel 的阻塞，我们可以很容易的实现锁，同时 golang 也通过 channel 封装好了各种锁模型的实现，这些锁位于`sync`包中，常见的方法如下
+
+```go
+sync.Mutex
+sync.RWMutex
+sync.Once
+sync.WaitGroup
+```
+
+## 阻塞主线程的几种方式
+
+有时候需要在主线程启动多个服务，同时主线程运行到最后要阻塞住，不然启动的服务就都停掉了。注意启动的服务也要至少有一个是一致运行的，不然会被检测到 deadlock
+
+1. 死循环,但会 100%占用 cpu,不建议使用
+
+```
+go func() {...}()
+for {}
+```
+
+2. channel 阻塞
+
+利用 channel 的阻塞，普通 channel，或者带缓冲的都能形成阻塞
+
+```
+c := make(chan int)
+go func() {...}()
+c <- 1
+```
+
+利用 nil channel 阻塞。当不为 channel 分配内存时，channel 就是 nil channel。nil channel 会永远阻塞对该 channel 的读、写操作。
+
+```
+var c chan struct{}
+go func() {...}()
+<-c
+```
+
+4.  使用锁
+
+sync.Mutex 同步锁。一个已经锁了的锁，再锁一次会一直阻塞
+
+```
+var m sync.Mutex
+m.Lock()
+go func() {...}()
+m.Lock()
+```
+
+一直不 Done
+
+```
+var wg sync.WaitGroup
+wg.Add(1)
+go func() {...}()
+wg.Wait()
+```
+
+5. 空 select
+
+```
+go func() {...}()
+select{}
+```
+
+6. os.Signal。系统信号量，在 go 里面也是个 channel，在收到特定的消息之前一直阻塞
+
+```
+sig := make(chan os.Signal, 2)
+signal.Notify(sig, syscall.SIGTERM, syscall.SIGINT)
+go func() {...}()
+<-sig
+```
+
+## 异常处理
 
 所以当 golang 中遇到 panic 时，如果不进行 recover，便会导致整个程序挂掉
 
@@ -733,13 +796,11 @@ func main() {
 }
 ```
 
-类型转换 T(value)
-
 ## 参考
 
 [GO 语言中文网](https://studygolang.com/)
 
-[用 Golang 来编写 cli 程序吧，Happy~ | 编程和酒](https://blog.biezhi.me/2017/11/build-cli-with-golang.html)
+[用 Golang 来编写 cli 程序吧，Happy~](https://blog.biezhi.me/2017/11/build-cli-with-golang.html)
 
 [Golang 标准库中文文档](https://studygolang.com/static/pkgdoc/main.html)
 
