--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -171,6 +171,16 @@ return temp
 | zebra stripes |   are neat    |    $1 |
 ```
 
+## 数学公式
+
+需要在配置中开启
+
+这是一行话`\( \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} \)`这是一行话
+
+`\[
+\int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15}
+\]`
+
 ## 插入 Html
 
 Markdown 支持插入 Html，JS 代码，下面以 iframe 为例
