--- a/_posts/2016-03-10-CentOS搭建开发环境.md
+++ b/_posts/2016-03-10-CentOS搭建开发环境.md
@@ -4,15 +4,15 @@ title: CentOS搭建开发环境
 categories: [Linux]
 ---
 
-Update: 2019/06/09
+Update: 2019/09/21
 
-系统版本 CentOS6 -> CentOS7
+系统版本 CentOS 7
 
 ## 服务器配置
 
 ### 安装常用软件
 
-```shell
+```sh
 yum update
 # 开发工具包
 yum groupinstall -y "Development Tools"
@@ -27,7 +27,7 @@ yum install libselinux-devel libstdc++-devel libtool* libgomp libxml2 libxml2-de
 yum install libtiff libtiff* make mpfr ntp nasm nasm*
 yum install patch pcre-devel perl yasm libmcrypt libmcrypt-devel
 yum install policycoreutils ppl telnet t1lib t1lib* wget zlib-devel readline readline-devel
-yum install libjpeg libjpeg-devel libpng libpng-devel freetype freetype-devel libcurl 
+yum install libjpeg libjpeg-devel libpng libpng-devel freetype freetype-devel libcurl
 yum install mhash-devel bzip2 bzip2-devel readline-devel libedit-devel sqlite-devel gmp gmp-devel
 
 # TAB补全增强工具
@@ -40,7 +40,7 @@ yum install lrzsz
 
 - 关闭 SELinux
 
-  ```
+  ```sh
   /usr/sbin/sestatus -v  #查看SELinux状态
   getenforce  #也可以用这个命令检查
   setenforce 0  #临时关闭(不用重启机器) 0为permissive模式 1为enforcing模式
@@ -49,7 +49,7 @@ yum install lrzsz
 
 - 关闭防火墙
 
-  ```
+  ```sh
   service iptables stop  #停止服务
   chkconfig iptables off  #开机不再启动
   ```
@@ -60,7 +60,7 @@ yum install lrzsz
 
 为了使用方便还是不设置密钥登陆，但是一定要更改下默认的 22 端口
 
-```
+```sh
 # 更改配置项Port 8022
 vi /etc/ssh/sshd_config
 # 重启服务
@@ -69,7 +69,7 @@ service sshd restart
 
 ### 中文支持
 
-```
+```sh
 # 查看系统拥有语言包,zh_CN.utf8是简体中文
 locale -a
 # 如果没有
@@ -79,21 +79,11 @@ yum install kde-l10n-Chinese
 vi /etc/locale.conf
 ```
 
-### 设置开机自启动脚本
-
-开机启动后要执行的命令可以追加在`rc.local`后面
-
-在 centos7 中，`/etc/rc.d/rc.local`的权限被降低了，所以需要执行如下命令赋予其可执行权限
-
-```
-chmod +x /etc/rc.d/rc.local
-```
-
 ## Nginx
 
 ### 安装
 
-```
+```sh
 wget http://nginx.org/download/nginx-1.14.2.tar.gz
 tar -zxvf nginx-1.14.2.tar.gz
 cd nginx-1.14.2/
@@ -106,7 +96,7 @@ configure 的过程可能会有下面的报错,安装好依赖就行了
 
 the HTTP rewrite module requires the PCRE library
 
-```
+```sh
 wget ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-8.39.tar.gz
 tar -zxvf pcre-8.39.tar.gz
 cd pcre-8.39
@@ -117,7 +107,7 @@ make install
 
 the HTTP gzip module requires the zlib library
 
-```
+```sh
 wget http://zlib.net/zlib-1.2.8.tar.gz
 tar -zxvf zlib-1.2.8.tar.gz
 cd zlib-1.2.8
@@ -128,7 +118,7 @@ make install
 
 ### 启动
 
-```
+```sh
 # 启动
 /usr/local/nginx/sbin/nginx
 # 停止
@@ -141,7 +131,7 @@ make install
 
 配置文件`/usr/local/nginx/conf/nginx.conf`
 
-```
+```conf
 # 禁止IP或其他域名直接访问
 server {
     listen       80 default;
@@ -235,7 +225,7 @@ server {
 
 ### 安装
 
-```
+```sh
 wget https://repo.mysql.com//mysql57-community-release-el7-9.noarch.rpm
 rpm -ivh mysql57-community-release-el7-9.noarch.rpm
 yum install mysql-community-server
@@ -243,7 +233,7 @@ yum install mysql-community-server
 
 ### 启动
 
-```
+```sh
 systemctl start mysqld   #启动 MySQL
 systemctl stop mysqld    #关闭 MySQL
 systemctl restart mysqld #重启 MySQL
@@ -256,7 +246,7 @@ systemctl disable mysqld #关闭开机启动
 
 启动后需要以 root 用户登入进去，然后更改密码，不然没有操作权限
 
-```
+```sh
 # 获取默认的随机密码
 grep 'temporary password' /var/log/mysqld.log
 
@@ -285,7 +275,7 @@ flush privileges;
 
 配置文件位于`/etc/my.cnf`,追加如下内容
 
-```
+```ini
 [client]
 # 编码设置
 default-character-set = utf8mb4
@@ -340,7 +330,7 @@ SHOW VARIABLES LIKE 'validate_password%';
 
 会安装到`/usr/java/`目录下
 
-```
+```sh
 # 先查询是否已经安装了 openjdk，有就卸载
 
 rpm -qa | grep java
@@ -354,7 +344,7 @@ rpm -ivh jdk-8u191-linux-x64.rpm
 
 修改`/etc/profile`文件，后面追加如下内容
 
-```
+```sh
 JAVA_HOME=/usr/java/jdk1.8.0_191-amd64
 JRE_HOME=${JAVA_HOME}/jre
 CLASSPATH=.:${JAVA_HOME}/lib:\${JRE_HOME}/lib
@@ -370,7 +360,7 @@ export JAVA_HOME JRE_HOME CLASSPATH
 
 修改完后 source 下立即生效
 
-```
+```sh
 source /etc/profile
 ```
 
@@ -378,7 +368,7 @@ source /etc/profile
 
 直接去官方下载 zip 包，装好 Java 环境后直接就启动了
 
-```
+```sh
 wget https://mirrors.tuna.tsinghua.edu.cn/apache/tomcat/tomcat-8/v8.5.41/bin/apache-tomcat-8.5.41.tar.gz
 
 tar -zxvf apache-tomcat-8.5.41.tar.gz
@@ -388,13 +378,13 @@ mv apache-tomcat-8.5.41 /usr/local/tomcat/
 
 追加启动命令到`/etc/rc.d/rc.local`，方便开机自启
 
-```
+```sh
 /usr/local/tomcat/apache-tomcat-8.5.41/bin/startup.sh
 ```
 
 解决 centos7 没有足够的熵来用于产生随机数，导致 tomcat 启动超级慢
 
-```
+```sh
 vim $JAVA_HOME/jre/lib/security/java.security
 securerandom.source=file:/dev/random
 # 改为
@@ -403,7 +393,7 @@ securerandom.source=file:/dev/urandom
 
 启动 manager-gui，调整`tomcat-users.xml`添加访问用户,然后找到`webapps/manager/META-INF/context.xml`中注释掉仅允许内部 IP 访问的设置
 
-```
+```xml
 <role rolename="manager-gui"/>
 <role rolename="admin-gui"/>
 <user username="user01" password="123456xxx" roles="admin-gui,manager-gui"/>
@@ -413,26 +403,26 @@ securerandom.source=file:/dev/urandom
 
 配置 PHP7 的源
 
-```
+```sh
 yum install epel-release
 rpm -Uvh https://mirror.webtatic.com/yum/el7/webtatic-release.rpm
 ```
 
 安装
 
-```
+```sh
 yum install php70w php70w-common php70w-fpm php70w-opcache php70w-gd php70w-mysqlnd php70w-mbstring php70w-devel
 ```
 
 CentOS 自带了 PHP5,安装 PHP7 的时候会遇到一些冲突,提示什么冲突就就删除什么，直到上面的命令可以执行
 
-```
+```sh
 yum remove php-common-5.4.16-46.el7.x86_64
 ```
 
 安装完毕后
 
-```
+```sh
 # 查看版本
 php -v
 # 查看安装的模块
@@ -441,7 +431,7 @@ php -m
 
 配置文件位于`/etc/php.ini`
 
-```
+```sh
 #启动,restart-重启，stop-停止
 systemctl start php-fpm
 #开机启动
@@ -450,8 +440,8 @@ systemctl enable php-fpm
 
 下面是一些常用的拓展，以后缺少什么就安装什么
 
-```
-安装包 提供的拓展
+```sh
+# 安装包 提供的拓展
 php70w mod_php, php70w-zts
 php70w-bcmath
 php70w-cli php-cgi, php-pcntl, php-readline
@@ -495,7 +485,7 @@ php70w-xmlrpc
 
 ## Golang
 
-```
+```sh
 mkdir -p /usr/local/go
 mkdir -p /usr/local/go/gopath
 cd /usr/local/go
@@ -506,7 +496,7 @@ mv go go_1.12.5
 
 配置环境变量`/etc/profile`后追加，然后`source /etc/profile`
 
-```
+```sh
 # Golang 环境变量
 GOROOT=/usr/local/go/go_1.11.10
 GOPATH=/usr/local/go/gopath
@@ -519,7 +509,7 @@ export GOROOT GOPATH GO111MODULE GOPROXY PATH
 
 ## NodeJS
 
-```
+```sh
 mkdir -p /usr/local/nodejs
 cd /usr/local/nodejs
 wget https://nodejs.org/dist/v10.16.0/node-v10.16.0-linux-x64.tar.xz
@@ -529,7 +519,7 @@ tar -xvf node-v10.16.0-linux-x64.tar
 
 配置环境变量`/etc/profile`后追加，然后`source /etc/profile`
 
-```
+```sh
 # NodeJS 环境变量
 NODE_HOME=/usr/local/nodejs/node-v10.16.0-linux-x64
 NODE_GLOBAL_MODEL=/usr/local/nodejs/node_global
@@ -540,9 +530,38 @@ export NODE_HOME PATH
 
 配置
 
-```
+```sh
 npm config set prefix "/usr/local/nodejs/node_global"
 npm config set cache "/usr/local/nodejs/node_cache"
 # 全局装个软件试一下
 npm install -g hexo-cli
+```
+
+## 设置开机自启动脚本
+
+开机启动后要执行的命令可以追加在`rc.local`后面，如下
+
+```sh
+# 开机启动,auto-start.sh记得给执行权限
+/server-apps/auto-start.sh >/server-apps/auto-start.log 2>&1
+```
+
+以后在`/server-apps/auto-start.sh`中添加启动命令就成了。注意在 centos7 中，`/etc/rc.d/rc.local`的权限被降低了，所以需要`chmod +x /etc/rc.d/rc.local`
+
+auto-start.sh
+
+```sh
+#!/bin/sh
+
+# mysql
+systemctl start mysqld
+
+# nginx
+/usr/local/nginx/sbin/nginx
+
+# tomcat
+/usr/local/tomcat/apache-tomcat-8.5.41/bin/startup.sh
+
+# php
+systemctl start php-fpm
 ```
