--- a/_posts/2018-07-28-GO的包管理和构建.md
+++ b/_posts/2018-07-28-GO的包管理和构建.md
@@ -169,7 +169,7 @@ go build -o dist/linux_demo demo.go
 
 以前建立一个项目的做法是在 GOPATH 的 src 下面建立`xxx.com/username/projectname`目录
 
-使用 go mod 后直接在任意一个位置建立目录就行了，然后执行`go mod init [module name]`。它会初始化一个`go.mod`文件，一般内容如下
+使用 go mod 直接在任意一个位置建立目录就行了，然后执行`go mod init [module name]`。它会初始化一个`go.mod`文件，一般内容如下
 
 ```
 module github.com/tmaize/file-manager
