--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -163,12 +163,12 @@ return temp
 | col 2 is      |   centered    |   \$12 |
 | zebra stripes |   are neat    |    \$1 |
 
-```
+```md
 | Tables        |      Are      |   Cool |
 | ------------- | :-----------: | -----: |
-| col 3 is      | right-aligned | $1600 |
-| col 2 is      |   centered    |   $12 |
-| zebra stripes |   are neat    |    $1 |
+| col 3 is      | right-aligned | \$1600 |
+| col 2 is      |   centered    |   \$12 |
+| zebra stripes |   are neat    |    \$1 |
 ```
 
 ## 数学公式
@@ -177,13 +177,59 @@ return temp
 
 这是一行话`\( \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} \)`这是一行话
 
-`\[
-\int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15}
-\]`
+`\[ \int_0^\infty \frac{x^3}{e^x-1}\,dx = \frac{\pi^4}{15} \]`
 
-## 插入 Html
+## 插入 html
 
-Markdown 支持插入 Html，JS 代码，下面以 iframe 为例
+<div id="htmldemo"></div>
+<style>
+#htmldemo{
+    height: 30px;
+    width: 30px;
+    background-color: #00aa9a;
+    animation-name: moveX;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-fill-mode : both;
+}
+@keyframes moveX {
+    0%{
+        transform: translateX(0px);
+    }
+    100%{
+        transform: translateX(100px);
+    }
+}
+</style>
+
+```html
+<div id="htmldemo"></div>
+<style>
+  #htmldemo {
+    height: 30px;
+    width: 30px;
+    background-color: #00aa9a;
+    animation-name: moveX;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-fill-mode: both;
+  }
+  @keyframes moveX {
+    0% {
+      transform: translateX(0px);
+    }
+    100% {
+      transform: translateX(100px);
+    }
+  }
+</style>
+```
+
+## 插入 iframe
 
 <iframe src="//music.163.com/outchain/player?type=2&id=28445796&auto=0&height=66" frameborder="0" width="100%" height="86px" ></iframe>
 
